feat: update swagger and make response dto
